Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-93852

QLoggingCategory documentation doesn't state under which conditions it is enabled by default

    XMLWordPrintable

Details

    • 029425478aed1454ec3f374af0284371d050ca68 (qt/qtbase/dev)

    Description

      It would be good if https://doc.qt.io/qt-6/qloggingcategory.html documented whether or not logging is enabled by default for release builds (it is). It would also be worth mentioning that categories whose names start with 'qt.', only have Info and Warning messages logged by default.

      Attachments

        Activity

          People

            kkohne Kai Köhne
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: