Clarify that QLoggingCategory works independent of compiler build type

Also mention exception for internal categories starting with 'qt.'

Fixes: QTBUG-93852
Change-Id: Iff8657a31074ee70cba25f6acdccb5ba4b1d3b01
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>